--- a/html/driver/index.html
+++ b/html/driver/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="../../static/css/app/driver.index.css">
-    <script type="text/javascript" src="//webapi.amap.com/maps?v=1.3&key=c8d499635271ab4f9d449d35911e2cf1"></script>
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=c8d499635271ab4f9d449d35911e2cf1"></script>
 </head>
 <body>
 <div class="page-group">
