--- a/html/driver/detail.html
+++ b/html/driver/detail.html
@@ -17,8 +17,7 @@
     </div>
 </div>
 <div id="mapContainer" style="display: none;"></div>
-<script type="text/javascript"
-        src="//webapi.amap.com/maps?v=1.3&key=c8d499635271ab4f9d449d35911e2cf1"></script>
+<script type="text/javascript"  src="http://webapi.amap.com/maps?v=1.3&key=c8d499635271ab4f9d449d35911e2cf1"></script>
 <script type="x-tmpl-mustache" id="detail_demo">
     <header class="bar bar-nav">
         <a class="button button-link button-nav pull-left  close-popup" href="index.html" data-transition='slide-out'>
