--- a/html/driver/map.html
+++ b/html/driver/map.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <script type="text/javascript"
-        src="//webapi.amap.com/maps?v=1.3&key=c8d499635271ab4f9d449d35911e2cf1&plugin=AMap.ToolBar"></script>
+        src="http://webapi.amap.com/maps?v=1.3&key=c8d499635271ab4f9d449d35911e2cf1&plugin=AMap.ToolBar"></script>
 <script>
     map = new AMap.Map("mapContainer");
 </script>
