--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 	<div id="win" class="um-win">
 
 	</div>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/summer.js"></script>
-	<script src="js/moli.common.js"></script>
+	<script src="static/js/common/aman.core.js"></script>
 </body>
 <script>
 	var turn = 0;
