还原到昨天

--- a/html/driver/find.html
+++ b/html/driver/find.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <!--div class="footer flex-box">
+        <div class="footer flex-box">
             <div class="flex-box-1">
                 <a href="./index.html" class="close-popup">
                     <div><span class="icon icon-home"></span></div>
@@ -89,7 +89,7 @@
                     <div><span class="tab-label">我的</span></div>
                 </a>
             </div>
-        </div-->
+        </div>
         <img src="../../static/img/find1.png" class="find-filter">
     </div>
     <div class="panel panel-right panel-reveal" id="panel-right-demo">
