--- a/html/driver/index.html
+++ b/html/driver/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <!--div class="footer flex-box">
+        <div class="footer flex-box">
             <div class="flex-box-1">
                 <a href="./index.html" class="close-popup active">
                     <div><span class="icon icon-home"></span></div>
@@ -82,7 +82,7 @@
                     <div><span class="tab-label">我的</span></div>
                 </a>
             </div>
-        </div-->
+        </div>
     </div>
 </div>
 <div id="mapContainer" style="display: none;"></div>
