--- a/html/driver/me.html
+++ b/html/driver/me.html
@@ -85,7 +85,7 @@
                 </ul>
             </div>
         </div>
-        <!--div class="footer flex-box">
+        <div class="footer flex-box">
             <div class="flex-box-1">
                 <a href="./index.html" class="close-popup">
                     <div><span class="icon icon-home"></span></div>
@@ -104,7 +104,7 @@
                     <div><span class="tab-label">我的</span></div>
                 </a>
             </div>
-        </div-->
+        </div>
     </div>
 </div>
 <script>
