--- a/html/driver/version.html
+++ b/html/driver/version.html
@@ -16,7 +16,7 @@
             </a>
             <h1 class="title">版本更新</h1>
         </header>
-        <div class="content native-scroll dis-n">
+        <div class="content native-scroll dis-n" id="dis">
             <div class="list-block media-list inset mt0">
                 <ul>
                     <li>
