--- a/html/driver/about.html
+++ b/html/driver/about.html
@@ -23,7 +23,7 @@
             </div>
             <div class="list-block media-list inset mt0">
                 <ul>
-                    <li>
+                    <li id="versionItem">
                         <a href="./version.html" class="item-link item-content close-popup">
                             <div class="item-media"><img src="../../static/img/version.svg"></div>
                             <div class="item-inner">
@@ -61,4 +61,5 @@
     </div>
 </div>
 </body>
+<script type='text/javascript' src='../../static/js/app/driver.about.js' charset='utf-8'></script>
 </html>
