--- a/html/driver/version.html
+++ b/html/driver/version.html
@@ -45,7 +45,7 @@
                     </li>
                 </ul>
             </div>
-            <nav class="bar bar-tab">
+            <!--nav class="bar bar-tab">
                 <a class="tab-item external close-popup" href="./index.html">
                     <span class="icon icon-home"></span>
                     <span class="tab-label">首页</span>
@@ -58,7 +58,7 @@
                     <span class="icon icon-me"></span>
                     <span class="tab-label">我的</span>
                 </a>
-            </nav>
+            </nav-->
         </div>
     </div>
 </div>
