--- a/html/driver/mapLink.html
+++ b/html/driver/mapLink.html
@@ -2,9 +2,13 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
 </head>
 
 <body>
