--- a/html/driver/mapLink.html
+++ b/html/driver/mapLink.html
@@ -13,12 +13,8 @@
 
 <body>
     <div class="um-frame">
-        <div class="um-content">
-            <div class="um-listview-wrap">
-                <ul class="um-list message-detail-list-box">
-
-                </ul>
-            </div>
+        <div id="mapContainer" class="um-content">
+            
         </div>
     </div>
     <script type="text/javascript"  src="http://webapi.amap.com/maps?v=1.3&key=c8d499635271ab4f9d449d35911e2cf1"></script>
