修改其它支付页面

--- a/html/driver/account.html
+++ b/html/driver/account.html
@@ -47,10 +47,10 @@
                 </div>
             </div>
             <div class="flex-box pay-box">
-                <!--div class="flex-box-1 pay-btn" data-type="wx">
+                <div class="flex-box-1 pay-btn" data-type="wx">
                     <div><img src="../../static/img/wx.svg"></div>
                     <div>微信支付</div>
-                </div-->
+                </div>
                 <div class="flex-box-1 pay-btn" data-type="alipay">
                     <div><img src="../../static/img/alipay.svg"></div>
                     <div>支付宝支付</div>
