--- a/html/driver/detail.html
+++ b/html/driver/detail.html
@@ -56,7 +56,8 @@
         {{#list}}
             <div class="type">
                 <div>{{resourceGrade}}</div>
-                <div>{{usedUnitFee}}</div>
+                <div>{{platformUnitFee}}</div>
+                <div style="font-size:.5rem;color: #999;text-decoration:line-through">{{usedUnitFee}}</div>
             </div>
             {{/list}}
         </div>
