--- a/html/driver/login.html
+++ b/html/driver/login.html
@@ -61,6 +61,8 @@
         </div>
     </div>
 </div>
+<script type='text/javascript' src='../../static/js/lib/zepto.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='../../static/js/common/aman.core.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='../../static/js/app/driver.loginRegister.js' charset='utf-8'></script>
 </body>
 </html>
